# pelican-granular-signals

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CHANGES.rst  LICENSE.txt  README.rst  pyproject.toml  tox.ini
.github/workflows/: test.yaml
changelog.d/: 20250408_082806_kurtmckee_updates.rst
requirements/: mypy.in  test.in
requirements/mypy/: cpython-3.10.txt  cpython-3.11.txt  cpython-3.12.txt  cpython-3.8.txt  cpython-3.9.txt  pyproject.toml  requirements.txt
requirements/test/: cpython-3.10.txt  cpython-3.11.txt  cpython-3.12.txt  cpython-3.8.txt  cpython-3.9.txt  pyproject.toml  requirements.txt
src/pelican/plugins/granular_signals/: __init__.py
tests/: test_granular_signals.py
