[tool.poetry]
name = "pelican-granular-signals"
version = "1.0.0"
description = "Add more granular signals to Pelican."
authors = ["Kurt McKee <contactme@kurtmckee.org>"]
license = "MIT"
packages = [
    { include = "pelican", from = "src" }
]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"

[tool.poetry.dev-dependencies]
tox = "^3.24.1"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
branch = true


[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]
