[project]
name = "pelican-granular-signals"
version = "1.2.0"
description = "Add more granular signals to Pelican."
authors = [
    { name = "Kurt McKee", email = "contactme@kurtmckee.org" },
]
license = "MIT"
readme = "README.rst"
keywords = [
    "pelican",
    "plugin",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pelican :: Plugins",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "blinker",
]

[project.urls]
Repository = "https://github.com/kurtmckee/pelican-granular-signals"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# poetry
# ------

[tool.poetry]
packages = [
    { include = "pelican", from = "src" }
]


# coverage
# --------

[tool.coverage.run]
branch = true
parallel = true
source = [
    "pelican.plugins.granular_signals",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
fail_under = 100


# isort
# -----

[tool.isort]
profile = "black"
known_third_party = "pelican"
known_first_party = "pelican.plugins.granular_signals"


# mypy
# ----

[tool.mypy]
packages = "pelican.plugins.granular_signals"
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
    "pelican.*",
]
ignore_missing_imports = true


# pytest
# ------

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = [
    "Breaking changes",
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
    "Development",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["main", "releases"]
new_fragment_template = "file: fragment-template.rst.txt"
